# quant-trading-supportive-system

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DECISIONS.md  DEPLOYMENT.md  Dockerfile  FIXES_REPORT.md  INFRASTRUCTURE_FIXES_REPORT.md  ISSUE_FIXES_DETAILED.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  scheduled.yml
configs/: alerts.yml  exchanges.yaml  indicators.yaml  production.yaml  prometheus.yml  strategies.yaml  streaming.yaml
deploy/: crypto-research-collector.service  crypto-research-validator.service  crypto-research.service  install.sh  prefect.service
docs/api/: index.md
scripts/: backfill.py  backup.py  compact_parquet.py  init_database.py  live.py  security_audit.sh  validate_data.py
security_reports/: security_audit_20251117-100113.txt
src/: __init__.py  config.py
src/analytics/: __init__.py
src/analytics/indicators/: __init__.py  technical.py
src/analytics/patterns/: __init__.py  ict.py
src/analytics/similarity/: __init__.py  pattern_matcher.py
src/backtesting/: __init__.py
src/backtesting/engines/: __init__.py  simple_backtest.py
src/data/: __init__.py
src/data/connectors/: __init__.py  base.py  binance.py  coinbase.py
src/data/stream/: __init__.py  binance_ws.py  websocket_manager.py
src/data/warehouse/: __init__.py  duckdb_manager.py  parquet_manager.py
src/strategies/: __init__.py  base.py
src/strategies/ict/: __init__.py  structure_trading.py
src/strategies/quant/: __init__.py  momentum.py
src/strategies/scalping/: __init__.py  vwap_pullback.py
src/ui/: __init__.py  app.py
src/ui/pages/: 1_📊_Market_Analysis.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_backtest_integration.py  test_data_pipeline.py  test_exchange_integration.py  test_strategy_execution.py
tests/unit/analytics/: test_indicators.py
tests/unit/backtesting/: test_backtest.py
tests/unit/data/: test_connectors.py
tests/unit/strategies/: test_base.py  test_pattern_recognition.py
